cmake_minimum_required(VERSION 3.5.0)

set(SUBDIR_PFX Year.2024.16v2.)

set(EXE_PFX AdventOfCode-${SUBDIR_PFX})
set(LIB_PFX LIB.${SUBDIR_PFX})
set(TEST_PFX TEST.${SUBDIR_PFX})

 add_library(${LIB_PFX}maze STATIC ./maze.cpp)

enable_testing()

set(TARGET_NAME ${EXE_PFX}1)
add_executable(${TARGET_NAME} Day16.1.cpp)
target_link_libraries(${TARGET_NAME} ${GLOBAL_LIB_PFX}charmap ${GLOBAL_LIB_PFX}math ${LIB_PFX}maze)
set_cxx_20(${TARGET_NAME})
set_property(TARGET ${TARGET_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/.")

set(TARGET_NAME ${EXE_PFX}2)
add_executable(${TARGET_NAME} Day16.2.cpp)
target_link_libraries(${TARGET_NAME} ${GLOBAL_LIB_PFX}charmap ${GLOBAL_LIB_PFX}math ${LIB_PFX}maze)
set_cxx_20(${TARGET_NAME})
set_property(TARGET ${TARGET_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/.")

set(TARGET_NAME ${TEST_PFX}maze_test)
add_executable(${TARGET_NAME} maze_test.cpp)
target_link_libraries(${TARGET_NAME} ${GLOBAL_LIB_PFX}charmap ${GLOBAL_LIB_PFX}math ${LIB_PFX}maze)
set_cxx_20(${TARGET_NAME})
#add_test(NAME ${TEST_PFX}maze_is_free-free_char COMMAND $<TARGET_FILE:${TARGET_NAME}> is_free-free_char)
#add_test(NAME ${TEST_PFX}maze_is_free-other_char COMMAND $<TARGET_FILE:${TARGET_NAME}> is_free-other_char)
#add_test(NAME ${TEST_PFX}maze_is_free-pos COMMAND $<TARGET_FILE:${TARGET_NAME}> is_free-pos)
#add_test(NAME ${TEST_PFX}maze_is_free-pos-end COMMAND $<TARGET_FILE:${TARGET_NAME}> is_free-pos-end)
#add_test(NAME ${TEST_PFX}maze_is_free-pos-not COMMAND $<TARGET_FILE:${TARGET_NAME}> is_free-pos-not)
#add_test(NAME ${TEST_PFX}maze_is_free-pos-start COMMAND $<TARGET_FILE:${TARGET_NAME}> is_free-pos-start)
#add_test(NAME ${TEST_PFX}maze_construct COMMAND $<TARGET_FILE:${TARGET_NAME}> construct)
#add_test(NAME ${TEST_PFX}maze_assign COMMAND $<TARGET_FILE:${TARGET_NAME}> assign)
#add_test(NAME ${TEST_PFX}maze_construct-copy COMMAND $<TARGET_FILE:${TARGET_NAME}> construct-copy)
#add_test(NAME ${TEST_PFX}maze_construct-position COMMAND $<TARGET_FILE:${TARGET_NAME}> construct-position)
#add_test(NAME ${TEST_PFX}maze_construct-char COMMAND $<TARGET_FILE:${TARGET_NAME}> construct-char)
#add_test(NAME ${TEST_PFX}maze_init-3x3-1-option COMMAND $<TARGET_FILE:${TARGET_NAME}> init-3x3-1-option)
#add_test(NAME ${TEST_PFX}maze_init-3x3-1-option-bkwd COMMAND $<TARGET_FILE:${TARGET_NAME}> init-3x3-1-option-bkwd)
#add_test(NAME ${TEST_PFX}maze_init-3x3-2-options COMMAND $<TARGET_FILE:${TARGET_NAME}> init-3x3-2-options)
#add_test(NAME ${TEST_PFX}maze_init-3x3-2-options-bkwd COMMAND $<TARGET_FILE:${TARGET_NAME}> init-3x3-2-options-bkwd)
#add_test(NAME ${TEST_PFX}maze_init-3x3-3-options COMMAND $<TARGET_FILE:${TARGET_NAME}> init-3x3-3-options)
#add_test(NAME ${TEST_PFX}maze_init-3x3-4-options COMMAND $<TARGET_FILE:${TARGET_NAME}> init-3x3-4-options)
#add_test(NAME ${TEST_PFX}maze_next_nodes-simple COMMAND $<TARGET_FILE:${TARGET_NAME}> next_nodes-simple)
#add_test(NAME ${TEST_PFX}maze_next_nodes-simple-exit COMMAND $<TARGET_FILE:${TARGET_NAME}> next_nodes-simple-exit)
#add_test(NAME ${TEST_PFX}maze_next_nodes-simple-deadend COMMAND $<TARGET_FILE:${TARGET_NAME}> next_nodes-simple-deadend)
#add_test(NAME ${TEST_PFX}maze_next_nodes-simple-loop COMMAND $<TARGET_FILE:${TARGET_NAME}> next_nodes-simple-loop)
add_test(NAME ${TEST_PFX}maze-node_dummy COMMAND $<TARGET_FILE:${TARGET_NAME}> dummy)
add_test(NAME ${TEST_PFX}maze-node_is_tile_free-free_char COMMAND $<TARGET_FILE:${TARGET_NAME}> is_tile_free-free_char)
add_test(NAME ${TEST_PFX}maze-node_is_tile_free-exit COMMAND $<TARGET_FILE:${TARGET_NAME}> is_tile_free-exit)
add_test(NAME ${TEST_PFX}maze-node_is_tile_free-other_char COMMAND $<TARGET_FILE:${TARGET_NAME}> is_tile_free-other_char)
add_test(NAME ${TEST_PFX}maze-node_is_tile_free-start COMMAND $<TARGET_FILE:${TARGET_NAME}> is_tile_free-start)
add_test(NAME ${TEST_PFX}maze-node_is_tile_free-out-of-range COMMAND $<TARGET_FILE:${TARGET_NAME}> is_tile_free-out-of-range)
add_test(NAME ${TEST_PFX}maze-node_init-empty COMMAND $<TARGET_FILE:${TARGET_NAME}> init-empty)
add_test(NAME ${TEST_PFX}maze-node_init-no-options COMMAND $<TARGET_FILE:${TARGET_NAME}> init-no-options)
add_test(NAME ${TEST_PFX}maze-node_init-one-option COMMAND $<TARGET_FILE:${TARGET_NAME}> init-one-option)
